@startuml

title __DATASTRUCTURE's Class Diagram__\n

  package dataStructure {
    class ProfileSettings {
        {static} + serialVersionUID : long
        - hasPassword : boolean
        - password : String
        - includeDecks : boolean
        - toggleSuggestions : boolean
        - includeUnowned : boolean
        + ProfileSettings()
        + isHasPassword()
        + getPassword()
        + isIncludeDecks()
        + isIncludeUnowned()
        + isToggleSuggestions()
        + setHasPassword()
        + setPassword()
        + setIncludeDecks()
        + setIncludeUnowned()
        + setToggleSuggestions()
    }
  }
  

  package dataStructure {
    class UserProfile {
        {static} + serialVersionUID : long
        - userContainers : ArrayList<Container>
        - profileName : String
        + UserProfile()
        + UserProfile()
        + getProfileName()
        + getProfileSettings()
        + getUserContainers()
        + setProfileName()
        + setContainers()
        + addContainer()
        + removeContainer()
        + numContainers()
        + listContainers()
        + determineContainer()
        + listAllCards()
    }
  }
  

  ProfileSettings -up-|> Serializable
  UserProfile -up-|> Serializable
  UserProfile o-- ProfileSettings : profileSettings


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
